# ubimaior

./: .appveyor.yml  .coveragerc  .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  mkdocs.yml  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  stale.yml  unit_tests.yml
docs/: .gitignore  Makefile  conf.py  index.md  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
tests/: __init__.py  conftest.py  test_commands.py  test_configurations.py  test_formats.py  test_mappings.py  test_sequences.py  test_ubimaior.py
tests/data/configurations/: .ubimaior.json  .ubimaior.yaml
tests/data/configurations/highest/: config_nc.json  config_nc.toml  config_nc.yaml
tests/data/configurations/lowest/: config_nc.json  config_nc.toml  config_nc.yaml
tests/data/configurations/middle/: config_nc.json  config_nc.toml  config_nc.yaml
tests/data/configurations/schema/: config_nc_schema.json
ubimaior/: __init__.py  commands.py  configurations.py  formats.py  mappings.py  sequences.py  ubimaior.py
