[tool.poetry]
name = "ubimaior"
version = "0.1.0"
description = "Manage hierarchy of objects as if they were one"
license = "Apache-2.0 OR MIT"
authors = ["Massimiliano Culpo <massimiliano.culpo@gmail.com>"]
repository = "https://github.com/forthelols/ubimaior.git"
homepage = "https://github.com/forthelols/ubimaior"
documentation = "https://ubimaior.readthedocs.io"
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.6.2"
jsonschema = "^4.0.0"
click = "^8.0.3"
"ruamel.yaml" = {version = "^0.17.19", optional = true}
toml = {version = "^0.10.1", optional = true }

[tool.poetry.extras]
yaml = ["ruamel.yaml"]
toml = ["toml"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"
pytest-cov = "^3.0.0"
tox = "^3.20.1"
pylint = "^2.7.0"
flake8 = "^4.0.1"
coverage = "^6.2"
vermin = "^1.1.0"
black = "^22.6"
mkdocs = "^1.1.2"

[tool.poetry.scripts]
ubimaior = "ubimaior.commands:main"

[tool.pylint."MESSAGES CONTROL"]
disable = "fixme,super-with-arguments,raise-missing-from,consider-using-f-string,unspecified-encoding"

[tool.black]
line-length = 100
target-version = ['py27', 'py37']

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
